Sat May 12 21:26:44 2013  Yutaka Yanoh  <yanoh@users.sourceforge.net>

	* lib/adlint/memo.rb : Revise cache name generation rule by the example
	  of Lisp naming conventions.

Sat May  4 01:29:26 2013  Yutaka Yanoh  <yanoh@users.sourceforge.net>

	* lib/adlint/memo.rb : Add `force_nullary' option to Memoizable#memoize
	  and improve performance of memoized unary method.
	* lib/adlint/cc1/domain.rb : Ditto.
	* lib/adlint/ld/object.rb : Ditto.
	* lib/adlint/location.rb : Ditto.

Fri Apr 12 13:06:31 2013  Yutaka Yanoh  <yanoh@users.sourceforge.net>

	* release.ga : 3.0.4
	  - Fix abend problem of adlint_chk command.

Fri Apr 12 12:06:23 2013  Yutaka Yanoh  <yanoh@users.sourceforge.net>

	* release.rc : 3.0.3
	  - Fix abend problem of adlint_chk command.

Fri Apr 12 11:56:59 2013  Yutaka Yanoh  <yanoh@users.sourceforge.net>

	* lib/adlint/analyzer.rb : Fix abend problem of adlint_chk command.

Thu Apr 12 10:48:11 2013  Yutaka Yanoh  <yanoh@users.sourceforge.net>

	* release.ga : 3.0.2
	  - Add missing transparency between a pointer to array and an array
	    variable in expression evaluation.
	  - Add missing transparency between a pointer function and a function
	    in expression evaluation.
	  - Clarify W0100 message text.
	  - Refactor memoizing utility in preparation for performance tuning.

Wed Apr 10 17:18:42 2013  Yutaka Yanoh  <yanoh@users.sourceforge.net>

	* lib/adlint/memo.rb : Refactor memoizing utility in preparation for
	  performance improvement.

Tue Apr  2 17:22:02 2013  Yutaka Yanoh  <yanoh@users.sourceforge.net>

	* release.rc : 3.0.1
	  - Add missing transparency between a pointer to array and an array
	    variable in expression evaluation.
	  - Add missing transparency between a pointer function and a function
	    in expression evaluation.
	  - Clarify W0100 message text.

Tue Apr  2 16:50:12 2013  Yutaka Yanoh  <yanoh@users.sourceforge.net>

	* etc/mesg.d/c_builtin/ja_JP/messages.yml : Clarify W0100 message text.